[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/advanced-text/shared/TabButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/advanced-text-editor/FilesPanel/FilesBox.gd" type="Script" id=2]
[ext_resource path="res://addons/advanced-text-editor/FilesPanel/FilesPanel.gd" type="Script" id=3]

[node name="FilesPanel" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -804.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 220.0
margin_bottom = 44.0
size_flags_horizontal = 3
columns = 2

[node name="NewFileButton" type="Button" parent="GridContainer"]
margin_right = 108.0
margin_bottom = 20.0
hint_tooltip = "Create New Text File"
size_flags_horizontal = 15
text = "New File"
clip_text = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFileButton" type="Button" parent="GridContainer"]
margin_left = 112.0
margin_right = 220.0
margin_bottom = 20.0
hint_tooltip = "Open Text File"
size_flags_horizontal = 15
text = "Open File"
clip_text = true
expand_icon = true

[node name="SaveFileButton" type="Button" parent="GridContainer"]
margin_top = 24.0
margin_right = 108.0
margin_bottom = 44.0
hint_tooltip = "Save File"
size_flags_horizontal = 15
disabled = true
text = "Save File"
clip_text = true
expand_icon = true

[node name="SaveAsFileButton" type="Button" parent="GridContainer"]
margin_left = 112.0
margin_top = 24.0
margin_right = 220.0
margin_bottom = 44.0
hint_tooltip = "Save As File"
size_flags_horizontal = 15
text = "Save As File"
clip_text = true
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 48.0
margin_right = 220.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="ScrollContainer"]
margin_right = 220.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FilesBox" type="VBoxContainer" parent="ScrollContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
script = ExtResource( 2 )
file_box_scene = ExtResource( 1 )

[node name="Node" type="Node" parent="."]

[node name="FileDialog" type="FileDialog" parent="Node"]
visible = true
margin_left = 240.0
margin_top = 186.0
margin_right = 801.0
margin_bottom = 441.0
window_title = "Zapisz plik"
resizable = true
filters = PoolStringArray( "*.md, *.rpy, *.txt ; Text Files" )
